; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_type.c_get_type.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_type.c_get_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"ECPGt_char\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"ECPGt_unsigned_char\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"ECPGt_short\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"ECPGt_unsigned_short\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"ECPGt_int\00", align 1
@.str.5 = private unnamed_addr constant [19 x i8] c"ECPGt_unsigned_int\00", align 1
@.str.6 = private unnamed_addr constant [11 x i8] c"ECPGt_long\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"ECPGt_unsigned_long\00", align 1
@.str.8 = private unnamed_addr constant [16 x i8] c"ECPGt_long_long\00", align 1
@.str.9 = private unnamed_addr constant [25 x i8] c"ECPGt_unsigned_long_long\00", align 1
@.str.10 = private unnamed_addr constant [12 x i8] c"ECPGt_float\00", align 1
@.str.11 = private unnamed_addr constant [13 x i8] c"ECPGt_double\00", align 1
@.str.12 = private unnamed_addr constant [11 x i8] c"ECPGt_bool\00", align 1
@.str.13 = private unnamed_addr constant [14 x i8] c"ECPGt_varchar\00", align 1
@.str.14 = private unnamed_addr constant [12 x i8] c"ECPGt_bytea\00", align 1
@.str.15 = private unnamed_addr constant [19 x i8] c"ECPGt_NO_INDICATOR\00", align 1
@.str.16 = private unnamed_addr constant [20 x i8] c"ECPGt_char_variable\00", align 1
@.str.17 = private unnamed_addr constant [12 x i8] c"ECPGt_const\00", align 1
@.str.18 = private unnamed_addr constant [14 x i8] c"ECPGt_decimal\00", align 1
@.str.19 = private unnamed_addr constant [14 x i8] c"ECPGt_numeric\00", align 1
@.str.20 = private unnamed_addr constant [15 x i8] c"ECPGt_interval\00", align 1
@.str.21 = private unnamed_addr constant [17 x i8] c"ECPGt_descriptor\00", align 1
@.str.22 = private unnamed_addr constant [12 x i8] c"ECPGt_sqlda\00", align 1
@.str.23 = private unnamed_addr constant [11 x i8] c"ECPGt_date\00", align 1
@.str.24 = private unnamed_addr constant [16 x i8] c"ECPGt_timestamp\00", align 1
@.str.25 = private unnamed_addr constant [13 x i8] c"ECPGt_string\00", align 1
@PARSE_ERROR = common dso_local global i32 0, align 4
@ET_ERROR = common dso_local global i32 0, align 4
@.str.26 = private unnamed_addr constant [35 x i8] c"unrecognized variable type code %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_type(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %31 [
    i32 150, label %5
    i32 133, label %6
    i32 137, label %7
    i32 129, label %8
    i32 142, label %9
    i32 132, label %10
    i32 140, label %11
    i32 131, label %12
    i32 139, label %13
    i32 130, label %14
    i32 143, label %15
    i32 144, label %16
    i32 152, label %17
    i32 128, label %18
    i32 151, label %19
    i32 153, label %20
    i32 149, label %21
    i32 148, label %22
    i32 146, label %23
    i32 138, label %24
    i32 141, label %25
    i32 145, label %26
    i32 136, label %27
    i32 147, label %28
    i32 134, label %29
    i32 135, label %30
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %37

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %37

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %37

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %37

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %37

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %37

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %37

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %37

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %37

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %37

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %37

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %37

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %37

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %37

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %37

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %37

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %37

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %37

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %37

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %37

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %37

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %37

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %37

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %37

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %37

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %37

31:                                               ; preds = %1
  %32 = load i32, i32* @PARSE_ERROR, align 4
  %33 = load i32, i32* @ET_ERROR, align 4
  %34 = load i32, i32* %3, align 4
  %35 = call i32 @mmerror(i32 %32, i32 %33, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.26, i64 0, i64 0), i32 %34)
  br label %36

36:                                               ; preds = %31
  store i8* null, i8** %2, align 8
  br label %37

37:                                               ; preds = %36, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %38 = load i8*, i8** %2, align 8
  ret i8* %38
}

declare dso_local i32 @mmerror(i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
